--- a/planet-stream/package.json
+++ b/planet-stream/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^2.0.0",
     "planet-stream": "^0.2.0",
     "ramda": "^0.19.1",
-    "shortid": "^2.2.4"
+    "shortid": "^2.2.4",
+    "turf-featurecollection": "^1.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.8"
