updated sample env

--- a/sample.env
+++ b/sample.env
@@ -1,2 +1,4 @@
-NO_KINESIS=true
+KINESIS_STREAM=streamname
+NO_KINESIS=FALSE
+LAMBDA_FUNCTION=lambdaname
 DATABASE_URL=postgres://osm@localhost:5432/postgres
