Add dockerized forgettable from bitly

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,18 @@ stream:
   env_file: .env
   links:
     - redis
+    - forgettable
 api:
   build: ./osm-stats-api
   links:
     - redis
+    - forgettable
   ports:
-    - "80:3000"
+    - 80:3000
   env_file: .env
+forgettable:
+  build: ./forgettable
+  ports:
+    - 8080:8080
+  links:
+    - redis
