Fix some logging

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -8,6 +8,7 @@ stream:
   links:
     - redis
     - forgettable
+  log_driver: awslogs
 api:
   build: ./osm-stats-api
   links:
@@ -16,9 +17,11 @@ api:
   ports:
     - 80:3000
   env_file: .env
+  log_driver: awslogs
 forgettable:
   build: ./forgettable
   ports:
     - 8080:8080
   links:
     - redis
+  log_driver: awslogs
