Add log opt to AWS logs for grouping logs

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -9,6 +9,8 @@ stream:
     - redis
     - forgettable
   log_driver: awslogs
+  log_opt:
+    awslogs-group: "/aws/ec2/${DEPLOY_NAME}"
 api:
   build: ./osm-stats-api
   links:
@@ -18,6 +20,8 @@ api:
     - 80:3000
   env_file: .env
   log_driver: awslogs
+  log_opt:
+    awslogs-group: "/aws/ec2/${DEPLOY_NAME}"
 forgettable:
   build: ./forgettable
   ports:
@@ -25,3 +29,5 @@ forgettable:
   links:
     - redis
   log_driver: awslogs
+  log_opt:
+    awslogs-group: "/aws/ec2/${DEPLOY_NAME}"
