Adds syslog driver and data container for persisting data

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,16 +1,18 @@
 redis:
   image: redis
+  command: redis-server --appendonly yes
   ports:
     - '6379'
+  log_driver: syslog
+  volumes_from:
+    - redis_data
 stream:
   build: ./planet-stream
   env_file: .env
   links:
     - redis
     - forgettable
-  log_driver: awslogs
-  log_opt:
-    awslogs-group: "/aws/ec2/${DEPLOY_NAME}"
+  log_driver: syslog
 api:
   build: ./osm-stats-api
   links:
@@ -19,15 +21,16 @@ api:
   ports:
     - 80:3000
   env_file: .env
-  log_driver: awslogs
-  log_opt:
-    awslogs-group: "/aws/ec2/${DEPLOY_NAME}"
+  log_driver: syslog
 forgettable:
   build: ./forgettable
   ports:
     - 8080:8080
   links:
     - redis
-  log_driver: awslogs
-  log_opt:
-    awslogs-group: "/aws/ec2/${DEPLOY_NAME}"
+  log_driver: syslog
+redis_data:
+  image: alpine
+  command: "true"
+  volumes:
+    - ./redis_data:/data
