--- a/deploy/osm-stats-api/Dockerfile
+++ b/deploy/osm-stats-api/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:4.2
 
-ENV API_VERSION 0.4.0
+ENV API_VERSION v0.5.0
 
 RUN curl -sSL https://github.com/AmericanRedCross/osm-stats-api/archive/${API_VERSION}.tar.gz \
   | tar -v -C /usr/src -xz
