Better docker-compose setup for dev

--- a/deploy/planet-stream/Dockerfile
+++ b/deploy/planet-stream/Dockerfile
@@ -1,5 +1,6 @@
 FROM node:6
 
+ARG NODE_ENV=production
 ENV NPM_CONFIG_LOGLEVEL warn
 
 WORKDIR /opt/app/
@@ -10,5 +11,7 @@ RUN npm install \
   && rm -rf /root/.npm
 
 COPY . /opt/app
+
+ENV PATH /opt/app/node_modules/.bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
 CMD ["node", "index.js"]
