Make listening port configurable

--- a/deploy/forgettable/Dockerfile
+++ b/deploy/forgettable/Dockerfile
@@ -7,6 +7,6 @@ RUN curl -sSL https://github.com/bitly/forgettable/archive/master.tar.gz \
 RUN go build forgettable-master/goforget
 RUN go install forgettable-master/goforget
 
-EXPOSE 8080
+ENV PORT 8080
 
-ENTRYPOINT goforget -redis-host=$REDIS_PORT_6379_TCP_ADDR:$REDIS_PORT_6379_TCP_PORT:1 -http=:8080 -default-rate=0.2
+ENTRYPOINT goforget -redis-host=$REDIS_PORT_6379_TCP_ADDR:$REDIS_PORT_6379_TCP_PORT:1 -http=:$PORT -default-rate=0.2
